# Opera

./: .version.txt  CMakeLists.txt  codelogicfunction.cpp  codelogicfunction.h  logicfunction.cpp  logicfunction.h  logicfunctionbase.cpp  logicfunctionbase.h  logicfunctioninterface.h  logicprocessor.cpp  logicprocessor.h  readme.txt  tablelogicfunction.cpp  tablelogicfunction.h  testcases.h  testlogicfunction.cpp
